<resources>
    <string name="app_name">Decola Viagens</string>
    <string name="pacote_activity">Pacotes</string>
    <string name="stringListaEspeciais">Especiais</string>
    <string name="stringTextview2">Brasil</string>
    <string name="fundo_layout">""</string>
    <string name="lista_imagem_pacote">""</string>
    <string name="resumo_imagem_pacote">""</string>
    <string name="string_teste_1">São Paulo</string>
    <string name="string_teste_2">2 dias</string>
    <string name="string_teste_3">11/08 – 13/08 de 2022</string>
    <string name="string_preco_final">Preço final:</string>
    <string name="string_teste_5">R$ 243,99</string>
    <string name="string_realizar_pagamento">Realizar pagamento</string>
    <string name="pagamento_activity_descricao">Digite as informações de cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_compra_pagamento_activity">Valor da compra:</string>
    <string name="pagamento_numero_cartao">Número do cartão</string>
    <string name="pagamento_mes_cartao">MM</string>
    <string name="pagamento_ano_cartao">AA</string>
    <string name="pagamento_cvc_cartao">CVC</string>
    <string name="pagamento_nome_cartao">Nome no cartão</string>
    <string name="string_finalizar_compra">Finalizar Compra</string>
    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZ\u0020</string>
    <string name="string_parabens">Parabéns!</string>
    <string name="string_compra_realizada">Compra realizada com sucesso :)</string>
    <string name="string_verifica_compra">Confira resumo da compra:</string>
</resources>