<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PagamentoActivity">

    <TextView
        android:id="@+id/pagamento_desc_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/pagamento_activity_descricao"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_compra_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_compra_pagamento_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_desc_textview" />

    <TextView
        android:id="@+id/pagamento_valor_final_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textColor="@color/greenPriceColor"
        tools:text="@string/string_teste_5"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_compra_textview"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_compra_textview" />

    <EditText
        android:id="@+id/pagamento_number_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/pagamento_numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_final_textview" />

    <EditText
        android:id="@+id/pagamento_mes_cartao_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/pagamento_mes_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvv_cartao_editText"
        app:layout_constraintStart_toStartOf="@id/pagamento_number_editText" />

    <EditText
        android:id="@+id/pagamento_ano_cartao_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:hint="@string/pagamento_ano_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvv_cartao_editText"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao_editText" />

    <EditText android:id="@+id/pagamento_cvv_cartao_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/pagamento_cvc_cartao"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:maxLength="3"
        android:inputType="number"
        android:textColorHint="#757575"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        app:layout_constraintTop_toBottomOf="@id/pagamento_number_editText"
        app:layout_constraintEnd_toEndOf="@id/pagamento_number_editText"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <EditText android:id="@+id/pagamento_nome_cartao_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pagamento_mes_cartao_editText"
        app:layout_constraintStart_toStartOf="@id/pagamento_mes_cartao_editText"
        app:layout_constraintEnd_toEndOf="@id/pagamento_cvv_cartao_editText"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:hint="@string/pagamento_nome_cartao"
        />

</androidx.constraintlayout.widget.ConstraintLayout>